syntax = "proto3";
option csharp_namespace = "NHMonitor.Probe";
message InterceptData{
	string sql = 1;
}
message RegisterApp{
	string appName=1;
}
message Ack{}

message RegisterAck{
	int32 appId = 1;
	string message=2;
}

service NHMonitorService{
	rpc MonitorStream (stream InterceptData) returns (Ack);
	rpc Register(RegisterApp) returns (RegisterAck);
}